Fix for auto zoom on iOS upon input focus

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -470,6 +470,9 @@ nav ul li a {
 		.algolia-autocomplete {
 			width: 100%;
 		}
+		#autocomplete-input {
+			font-size: 16px;
+		}
 		.algolia-autocomplete .aa-input, .algolia-autocomplete .aa-hint {
 			width: 100%;
 		}
